# bandit-decentralized-learning

./: .gitignore  GUIDE.md  PLAN.md  PROPOSAL_DATASET_ABSTRACTION.md  README.md  REPORT.md  TODO.md  TUTORIAL.md  pyproject.toml  reproduce.sh
banditdl/core/: sampling.py
banditdl/data/: __init__.py  dataset.py  dataset_utils.py  femnist.py  models.py  partitioning.py  providers.py
banditdl/experiments/: config_adapter.py  config_schema.py  engine.py  hydra_run.py  sweep.py
banditdl/utils/: experiment_table.py  math_utils.py  metrics.py  plot_graph.py  plot_sweep_alltogether.py  plot_sweep_base.py  plot_sweep_heatmap.py  plot_sweep_perparam.py  plotting.py  seed_averaging.py  sweep_plotting.py
conf/: config.yaml  sweep.yaml
conf/adversary/: alie.yaml  none.yaml
conf/aggregator/: mean.yaml  robust_trmean.yaml
conf/dataset/: cifar10.yaml  femnist.yaml  femnist_pool.yaml  mnist.yaml
conf/evaluation/: evaluation.yaml
conf/heterogeneity/: alpha0.5.yaml  alpha1.yaml  alpha10.0.yaml  alpha100.yaml  dirichlet_alpha0.5.yaml  dirichlet_alpha1.yaml  dirichlet_alpha10.yaml  dirichlet_alpha100.yaml  grouped_2x5.yaml  grouped_3x3_ov1.yaml  grouped_5x2.yaml  pathological_2c.yaml  pathological_2g_5c.yaml  pathological_2s.yaml  pathological_3g_3c_ov1.yaml  pathological_5c.yaml  pathological_5g_2c.yaml
conf/optimization/: opt_cifar10.yaml  opt_mnist.yaml  (+1 more)
docs/: config.md  sweeps.md
scripts/: analyze_clustering.py  plot_clustering_graph.py  plot_discount_tables.py  plot_results.py  plot_sweep.py
slurm/: README.md  sbatch_banditdl.sh  sbatch_banditdl_cpu.sh  sbatch_banditdl_gpu.sh  sbatch_banditdl_optuna_gpu.sh  setup.sh  submit_sweep.sh  submit_sweep_cpu.sh  submit_sweep_gpu.sh
tests/: test_config_adapter.py  test_data_utils.py  test_dataset.py  test_dynamic_worker.py  test_engine.py  test_femnist.py  test_metrics.py  test_plot_graph.py  test_plotting.py  test_robust_aggregation.py  test_sampling.py  test_seed_averaging.py  test_sweep_plotting.py
(+26 files in other folders)
