[project]
name = "banditdl"
version = "0.1.0"
description = "Bandit-ready decentralized learning experiments under Byzantine attacks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14",
    "hydra-core>=1.3.2",
    "mabwiser>=2.7.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "optuna>=4.6.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "UP",   # pyupgrade
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]

ignore = [
    "PLR0911", # Too many return statements (sometimes necessary in math logic)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-statements = 50
max-branches = 12

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
